Added new file in public folder

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lrsjng.jquery-qrcode/0.18.0/jquery-qrcode.js" integrity="sha512-k07XFsUtr4GlNmqQnexIG4mS58lorW41CpAsr+hvQ0mIJhcglGdTGeSZcnIBRElbdDTO0vqI9X01tzQ1bCrtyQ==" crossorigin="anonymous"></script>
-    <title>WebSockets - Simple chat</title>
+    <title>Hypersign Authenticator</title>
 </head>
 
 <body>
