--- a/public/deeplink.html
+++ b/public/deeplink.html
@@ -61,13 +61,13 @@
     </nav>
     <div class="container">
         <div class="jumbotron">
-            <h1>Auth Credential</h1>
-            <p class="lead">This is your secret auth credential</p>
-            <p class="lead"><strong>Don't share this with anyone.</strong></p>
+            <h1>Verifiable Credential</h1>
+            <p class="lead">You are about to receive your credential in Hypersign identity wallet. This credential might contain your personal information.</p>
+            <p class="lead"><strong>Don't share this with someone you not trust!</strong></p>
             <!-- <div id="qrcode"></div>
             <p class="button"></p> -->
             <div class="deskContent">
-                <p>You can either scan the QR and load in mobile wallet or click on the accept button to store it in web wallet</p>
+                <p>You can either scan the QR to load in mobile wallet or click on the accept button to store it in web wallet</p>
                 <div id="qrcode"></div>
                 <p class="button-web"></p>
             </div>
