--- a/public/deeplink.html
+++ b/public/deeplink.html
@@ -61,7 +61,7 @@
     </nav>
     <div class="container">
         <div class="jumbotron">
-            <h2>Verifiable Credential</h2>
+            <h2>Credential Issuance</h2>
             <p class="lead">You are about to receive your credential in Hypersign identity wallet. This credential might contain your personal information.</p>
             <p class="lead"><strong>Don't share this with someone you not trust!</strong></p>
             <!-- <div id="qrcode"></div>
