--- a/public/deeplink.html
+++ b/public/deeplink.html
@@ -95,8 +95,8 @@
 
             const qrText = deeplink.split('url=')[1];;
             const weblink = "https://wallet.hypermine.in/deeplink?url=" + qrText
-            const buttonhtml = `<a  class="btn " href='${deeplink}' target='_blank'>Accept Credenital in Mobile Wallet</a>`;
-            const buttonhtmlweb = `<a  class="btn " href='${weblink}' target='_blank'>Accept Credenital in Web Wallet</a>`;
+            const buttonhtml = `<a  class="btn " href='${deeplink}' target='_blank'>Accept Credential in Mobile Wallet</a>`;
+            const buttonhtmlweb = `<a  class="btn " href='${weblink}' target='_blank'>Accept CredentialPavel98119 in Web Wallet</a>`;
             $('.button').html(buttonhtml);
             $('.button-web').html(buttonhtmlweb);
             $("#qrcode").qrcode({
